v1/index.md
---
layout: default
title: MultiTech Developer Documentation (v1)
description: Developer documentation for MultiTech IoT devices and LoRaWAN solutions
toc: false
permalink: /v1/
doc_version: v1
---

<div class="home-hero">
  <h1>MultiTech Developer Documentation</h1>
  <p>Guides and documentation for MultiTech IoT gateway devices, LoRaWAN networks, and embedded development.</p>
  <div class="hero-links">
    <a href="{{ '/v1/mpower-api' | relative_url }}" class="hero-btn primary">
      mPower API Overview
    </a>
    <a href="{{ '/v1/lorawan-app-connect' | relative_url }}" class="hero-btn secondary">
      LoRaWAN Guides
    </a>
  </div>
</div>

<div class="home-section">
  <h2>🚀 Getting Started</h2>
  <div class="card-grid">
    <div class="card">
      <div class="card-icon">📘</div>
      <h3><a href="{{ '/v1/mpower-api' | relative_url }}">mPower Device API</a></h3>
      <p>REST API overview for managing MultiTech IoT gateway devices including Conduit and mPower Edge Intelligence platform.</p>
    </div>
    <div class="card">
      <div class="card-icon">📡</div>
      <h3><a href="{{ '/v1/lorawan-app-connect' | relative_url }}">LoRaWAN App Connect</a></h3>
      <p>Protocol and sample applications for connecting LoRaWAN networks to back-end services via HTTP and MQTT.</p>
      <div class="card-links">
        <a href="{{ '/v1/lorawan-app-connect-mqtt' | relative_url }}">MQTT v1.0</a>
        <a href="{{ '/v1/lorawan-app-connect-mqtt-v1_1' | relative_url }}">MQTT v1.1</a>
      </div>
    </div>
    <div class="card">
      <div class="card-icon">🔧</div>
      <h3><a href="{{ '/v1/conduit-custom-app-development' | relative_url }}">Custom App Development</a></h3>
      <p>Best practices for developing custom Python applications for MultiTech Conduit gateways.</p>
      <div class="card-links">
        <a href="{{ '/v1/conduit-cursor-development' | relative_url }}">Cursor AI Development</a>
      </div>
    </div>
  </div>
</div>

<div class="home-section">
  <h2>📡 LoRaWAN Documentation</h2>
  <div class="card-grid">
    <div class="card">
      <h3><a href="{{ '/v1/lorawan-app-connect' | relative_url }}">App Connect HTTP</a></h3>
      <p>HTTP protocol for connecting LoRaWAN networks to back-end services.</p>
    </div>
    <div class="card">
      <h3><a href="{{ '/v1/lorawan-app-connect-mqtt-v1_1' | relative_url }}">App Connect MQTT v1.1</a></h3>
      <p>Latest MQTT protocol with enhanced features and Azure IoT Hub support.</p>
      <div class="card-links">
        <a href="{{ '/v1/lorawan-app-connect-mqtt-azure' | relative_url }}">Azure</a>
        <a href="{{ '/v1/lorawan-app-connect-mqtt-websockets' | relative_url }}">WebSockets</a>
      </div>
    </div>
    <div class="card">
      <h3><a href="{{ '/v1/lora-mqtt-bridge' | relative_url }}">MQTT Bridge</a></h3>
      <p>Bridge MQTT messages from local gateway to multiple remote brokers with filtering.</p>
    </div>
    <div class="card">
      <h3><a href="{{ '/v1/multicast' | relative_url }}">Multicast Protocol</a></h3>
      <p>Create multicast sessions between LoRaWAN network and multiple end-devices.</p>
    </div>
    <div class="card">
      <h3><a href="{{ '/v1/fragmentation' | relative_url }}">Fragmented Data Transfer</a></h3>
      <p>Efficient transmission of files to end-devices for firmware updates.</p>
    </div>
    <div class="card">
      <h3><a href="{{ '/v1/basic-station' | relative_url }}">Basic Station</a></h3>
      <p>LoRa Basics Station protocol documentation.</p>
    </div>
  </div>
</div>

<div class="home-section">
  <h2>💻 Embedded Development</h2>
  <div class="card-grid">
    <div class="card">
      <h3><a href="{{ '/v1/dot-development' | relative_url }}">mDot Development</a></h3>
      <p>Developing with mDot embedded LoRa modules. Includes serial firmware upgrade tool.</p>
    </div>
    <div class="card">
      <h3><a href="{{ '/v1/dot-development-xdot' | relative_url }}">xDot / xDot-ES / xDot-AD Development</a></h3>
      <p>Developing with xDot family ultra-low-power LoRa modules including ES (enhanced security) and AD (additional debug) variants.</p>
      <div class="card-links">
        <a href="{{ '/v1/xdot-daplink' | relative_url }}">DAPLink Debug</a>
      </div>
    </div>
    <div class="card">
      <h3><a href="{{ '/v1/dot-migrate-to-4' | relative_url }}">Migrate to Dot v4</a></h3>
      <p>Migration guide for updating to Dot firmware version 4.</p>
    </div>
  </div>
</div>

---

## Support & Resources

- **GitHub Issues**: [MultiTechSystems/multitechsystems.github.io](https://github.com/MultiTechSystems/multitechsystems.github.io)
- **Support Portal**: [support.multitech.com](https://support.multitech.com)
- **Product Documentation**: [multitech.com/documentation](https://www.multitech.com/documentation)

<p style="text-align: center; color: #666; margin-top: 40px;">
  <small>Documentation Version 1.0 | Last Updated: December 2025</small>
</p>
